--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1334,7 +1334,7 @@ div:hover::-webkit-scrollbar {
 #general-info-modal {
     pointer-events: none;
     background: rgba(0, 0, 0, 0.3);
-    z-index: 1000;
+    z-index: 1050;
 }
 
 #general-info-modal .modal-content {
@@ -1973,4 +1973,16 @@ div:hover::-webkit-scrollbar {
     padding: 5px;
     font-weight: normal;
     margin-bottom: 5px;
+}
+
+.modal-header .close {
+    padding: 5px !important;
+}
+
+.close-button > img, .close-icon {
+    height: 20px;
+}
+
+.close-button:hover > img, .close-icon:hover {
+    filter: invert(100%);
 }
