--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -28,7 +28,7 @@
         </div>
         <div class="right-panel-header">
             <div class="pull-right">
-                <i class="fa fa-window-close-o close-panel header-panel-button"></i>
+                <img class="close-icon close-panel header-panel-button" src="/static/img/close_icon.svg">
             </div>
             <div class="pull-left">
                 <i class="fa fa-caret-square-o-left return-panel header-panel-button"></i>
@@ -53,7 +53,7 @@
                         SEARCH
                     </span>
                 <div class="close-button map-search-close pull-right">
-                    X
+                    <img class="close-icon" src="/static/img/close_icon.svg">
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
                         SEARCH RESULT
                     </span>
                 <div class="close-button map-result-close pull-right">
-                    X
+                    <img class="close-icon" src="/static/img/close_icon.svg">
                 </div>
             </div>
         </div>
@@ -260,7 +260,7 @@
                         SPATIAL FILTER
                     </span>
                 <div class="spatial-filter-container-close close-button pull-right">
-                    X
+                    <img class="close-icon" src="/static/img/close_icon.svg">
                 </div>
             </div>
         </div>
@@ -321,7 +321,7 @@
                     <h5 class="modal-title">Upload a boundary</h5>
                     <button type="button" class="close close-upload-boundary-modal"
                             aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                        <img class="close-icon" src="/static/img/close_icon.svg">
                     </button>
                 </div>
                 <div class="modal-body">
@@ -425,7 +425,7 @@
                         LAYER SELECTOR
                     </span>
                 <div class="layers-selector-container-close close-button pull-right">
-                    X
+                    <img class="close-icon" src="/static/img/close_icon.svg">
                 </div>
             </div>
         </div>
@@ -442,7 +442,7 @@
                         LOCATE OPTIONS
                     </span>
                 <div class="locate-options-container-close close-button pull-right">
-                    X
+                    <img class="close-icon" src="/static/img/close_icon.svg">
                 </div>
             </div>
         </div>
@@ -469,7 +469,7 @@
                     <h5 class="modal-title">Locate by Coordinate</h5>
                     <button type="button" class="close"
                             aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                        <img class="close-icon" src="/static/img/close_icon.svg">
                     </button>
                 </div>
                 <div class="modal-body">
@@ -535,7 +535,7 @@
                     <h5 class="modal-title">Upload Single Occurrence <span class="badge ud-badge-same-site badge-info"> Capturing another record at the same site </span> </h5>
                     <button type="button" class="close small-close"
                             aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                        <img class="close-icon" src="/static/img/close_icon.svg">
                     </button>
                 </div>
                 <div class="modal-body">
@@ -634,7 +634,7 @@
                     <h5 class="modal-title">Download data</h5>
                     <button type="button" class="close"
                             aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                        <img class="close-icon" src="/static/img/close_icon.svg">
                     </button>
                 </div>
                 <div class="modal-body">
