--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -57,7 +57,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title">Biodiversity Information Management System (BIMS)</h5>
                     <button type="button" class="close close-info-popup">
-                        <span>&times;</span>
+                        <img src="{% static 'img/close_icon.svg' %}">
                     </button>
                 </div>
                 <div class="modal-body">
