add print basemap functionality

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -71,6 +71,9 @@
             </div>
         </div>
     </div>
+    <div id="ripple-loading" style="display: none">
+        <img src="{% static 'img/loading-spinner.gif' %}">
+    </div>
 
     {# HERE ARE THE TEMPLATES AREA #}
     {% block additional_template %}
