--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1974,3 +1974,17 @@ div:hover::-webkit-scrollbar {
     font-weight: normal;
     margin-bottom: 5px;
 }
+
+#ripple-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 100000;
+}
+
+#ripple-loading img {
+    margin: 20% 42%;
+}
