Change upload occurrence to capture occurrence

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -398,8 +398,8 @@
                 <i class="fa fa-crop" aria-hidden="true"></i>
             </div>
             {% if perms.bims.can_upload_csv %}
-            <div class="upload-data sub-control-panel" data-toggle="popover" data-placement="right" data-trigger="hover" data-content="Upload Single Occurrence">
-                <i class="fa fa-upload" aria-hidden="true"></i>
+            <div class="upload-data sub-control-panel" data-toggle="popover" data-placement="right" data-trigger="hover" data-content="Capture Single Occurrence">
+                <i class="fa fa-crosshairs" aria-hidden="true"></i>
             </div>
             {% endif %}
         {% endif %}
@@ -532,7 +532,7 @@
         <div class="modal-dialog modal-upload-data" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Upload Single Occurrence <span class="badge ud-badge-same-site badge-info"> Capturing another record at the same site </span> </h5>
+                    <h5 class="modal-title">Capture Single Occurrence <span class="badge ud-badge-same-site badge-info"> Capturing another record at the same site </span> </h5>
                     <button type="button" class="close small-close"
                             aria-label="Close">
                         <span aria-hidden="true">&times;</span>
