--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -46,8 +46,8 @@
     <div class="map-search-box map-control-panel-box">
         <div class="row">
             <div class="col-lg-12" style="padding-right: 0">
-                <div class="close-button search-reset pull-left">
-                    Reset
+                <div class="close-button search-reset pull-left" data-toggle="tooltip" data-placement="top" data-original-title="Reset">
+                    <img class="close-icon" src="/static/img/reset.svg">
                 </div>
                 <span class="title">
                         SEARCH
