--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -822,6 +822,9 @@
                 </div>
             </div>
         </div>
+        <div class="open-detailed-button-container">
+            <button class="btn btn-inf open-detailed-view">Open detailed dashboard</button>
+        </div>
     </div>
 </script>
 
