--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -17,7 +17,7 @@
                 <h5 class="dd-title">Names & Taxonomy</h5>
                 <div class="overview-name-taxonomy-table dashboard-table" style="margin-top: 10px; margin-bottom: 10px"></div>
             </div>
-            <div class="col-lg-8" id="dashboard-graph-wrapper">
+            <div class="col-lg-8 dashboard-graph-wrapper">
                 <div class="row">
                     <div class="col-lg-6">
                         <h5 class="dd-title">Records overtime</h5>
@@ -33,7 +33,7 @@
                         <canvas id="taxa-records-timeline-graph" width="150px" height="150px"></canvas>
                     </div>
                     <div style="width: 5%; ">
-                        <button class="btn btn-default btn-element-download pull-right" style="float: left" onclick="download(document.getElementById('taxa-records-timeline-graph'), 'taxa-record-timeline')">
+                        <button class="btn btn-default btn-element-download pull-right download-taxa-records-timeline" style="float: left">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
