--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -1,5 +1,5 @@
 
-#detailed-taxa-dashboard, #detailed-dashboard, .loading-dashboard {
+#detailed-taxa-dashboard, #detailed-site-dashboard, .loading-dashboard {
     position: fixed;
     top: 0;
     left: 0;
