--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -150,18 +150,19 @@
                     </table>
                 </div>
                 <span><b>Occurence data</b></span>
+                <div class="csv-data-download"><button class="btn btn-info download-as-csv"> Download as CSV </button></div>
                 <div id="occurence-table" class="dashboard-table">
                 </div>
             </div>
             <div class="col-lg-8" id="dashboard-graph-wrapper">
-                <span><b>Fish</b></span>
+                <span><b>Collections Chart</b></span>
                 <div>
                     <div class="row" style="margin: 0 !important;">
                         <div style="width: 90%">
                             <table style="width: 100%; text-align: center; border: 1px solid black">
                                 <tr>
-                                    <td id="fish-category-wrapper" class="chart-wrapper" width="33%">
-                                        <canvas id="fish-category-graph" width="150px" height="150px"></canvas>
+                                    <td id="collection-category-wrapper" class="chart-wrapper" width="33%">
+                                        <canvas id="collection-category-graph" width="150px" height="150px"></canvas>
                                     </td>
                                     <td width="33%">
                                         <canvas id="cons-status-graph" width="150px" height="150px"></canvas>
@@ -178,8 +179,7 @@
                             </table>
                         </div>
                         <div style="width: 10%;">
-                            <button class="btn btn-default btn-element-download pull-right"
-                                    onclick="download(document.getElementById('fish-category-wrapper'), 'origin')"><i class="fa fa-download"></i></button>
+                            <button class="btn btn-default btn-element-download pull-right download-origin-chart"><i class="fa fa-download"></i></button>
                         </div>
                     </div>
                 </div>
@@ -188,17 +188,15 @@
                         <canvas id="records-timeline-graph" width="150px" height="150px"></canvas>
                     </div>
                     <div style="width: 10%;">
-                        <button class="btn btn-default btn-element-download pull-right"
-                                onclick="download(document.getElementById('record-timeline-wrapper'), 'record-timeline')"><i class="fa fa-download"></i></button>
+                        <button class="btn btn-default btn-element-download pull-right download-record-timeline"><i class="fa fa-download"></i></button>
                     </div>
                 </div>
                 <div class="row" style="margin: 0 !important; margin-top: 15px !important;">
-                    <div id="fish-timeline-wrapper" class="chart-wrapper" style="border: 1px solid black; width: 90%; height: 200px">
-                        <canvas id="fish-timeline-graph" width="150px" height="150px"></canvas>
+                    <div id="collection-timeline-wrapper" class="chart-wrapper" style="border: 1px solid black; width: 90%; height: 200px">
+                        <canvas id="collection-timeline-graph" width="150px" height="150px"></canvas>
                     </div>
                     <div style="width: 10%;">
-                        <button class="btn btn-default btn-element-download pull-right"
-                                onclick="download(document.getElementById('fish-timeline-wrapper'), 'fish-timeline')"><i class="fa fa-download"></i></button>
+                        <button class="btn btn-default btn-element-download pull-right download-collection-timeline"><i class="fa fa-download"></i></button>
                     </div>
                 </div>
             </div>
