--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="detailed-dashboard-title">&nbsp;</div>
-    <button class="btn btn-primary btn-dashboard close-taxon-dashboard" style="float: right"><i class="fa fa-times pull-right"></i></button>
+    <button class="btn btn-primary btn-dashboard close-dashboard" style="float: right"><i class="fa fa-times pull-right"></i></button>
     <div class="container dashboard-wrapper">
         <div class="container row">
             <div class="col-lg-4">
@@ -119,4 +119,87 @@
             <td><%= scientific_name %></td>
         </tr>
     </table>
+</script>
+
+<script type="text/html" id="detailed-site-dashboard">
+     <div class="loading-dashboard">
+        <img src="/static/img/small-loading.svg" width="250" alt="Loading view">
+        <div class="loading-dashboard-subtitle">
+            Loading...
+        </div>
+    </div>
+    <button class="btn btn-primary btn-dashboard close-dashboard" style="float: right"><i class="fa fa-times pull-right"></i></button>
+    <div class="container dashboard-wrapper">
+        <div>
+            <h3>Overview</h3>
+        </div>
+        <div class="container row">
+            <div class="col-lg-4">
+                <div id="locationsite-map" class="map" style="height: 300px; width: 100%; border: 1px solid black"></div>
+                <button id="export-locationsite-map" class="btn btn-default btn-element-download"><i class="fa fa-download"></i></button>
+                <div id="overview-dashboard-table" class="dashboard-table" style="margin-top: 10px; margin-bottom: 10px">
+                    <table>
+                        <tr>
+                            <td>Name</td>
+                            <td id="site-name"></td>
+                        </tr>
+                        <tr>
+                            <td>Records</td>
+                            <td id="total-records"></td>
+                        </tr>
+                    </table>
+                </div>
+                <span><b>Occurence data</b></span>
+                <div class="csv-data-download"><button class="btn btn-info download-as-csv"> Download as CSV </button></div>
+                <div id="occurence-table" class="dashboard-table">
+                </div>
+            </div>
+            <div class="col-lg-8" id="dashboard-graph-wrapper">
+                <span><b>Collections Chart</b></span>
+                <div>
+                    <div class="row" style="margin: 0 !important;">
+                        <div style="width: 90%">
+                            <table style="width: 100%; text-align: center; border: 1px solid black">
+                                <tr>
+                                    <td id="collection-category-wrapper" class="chart-wrapper" width="33%">
+                                        <canvas id="collection-category-graph" width="150px" height="150px"></canvas>
+                                    </td>
+                                    <td width="33%">
+                                        <canvas id="cons-status-graph" width="150px" height="150px"></canvas>
+                                    </td>
+                                    <td width="33%">
+                                        <canvas id="sampling-method-graph" width="150px" height="150px"></canvas>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Origin</td>
+                                    <td>Cons status</td>
+                                    <td>Sampling method</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div style="width: 10%;">
+                            <button class="btn btn-default btn-element-download pull-right download-origin-chart"><i class="fa fa-download"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="margin: 0 !important; margin-top: 15px !important;">
+                    <div id="record-timeline-wrapper" class="chart-wrapper" style="border: 1px solid black; width: 90%; height: 200px">
+                        <canvas id="records-timeline-graph" width="150px" height="150px"></canvas>
+                    </div>
+                    <div style="width: 10%;">
+                        <button class="btn btn-default btn-element-download pull-right download-record-timeline"><i class="fa fa-download"></i></button>
+                    </div>
+                </div>
+                <div class="row" style="margin: 0 !important; margin-top: 15px !important;">
+                    <div id="collection-timeline-wrapper" class="chart-wrapper" style="border: 1px solid black; width: 90%; height: 200px">
+                        <canvas id="collection-timeline-graph" width="150px" height="150px"></canvas>
+                    </div>
+                    <div style="width: 10%;">
+                        <button class="btn btn-default btn-element-download pull-right download-collection-timeline"><i class="fa fa-download"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </script>
