--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -602,6 +602,12 @@
                             <input type="text"
                                    class="form-control mb-2 mr-sm-2 ud-item"
                                    id="ud_custodian" name="Custodian" placeholder="">
+                            <label for="ud_references" class="upload-input-label">
+                                References
+                            </label>
+                            <input type="text"
+                                   class="form-control mb-2 mr-sm-2 ud-item"
+                                   id="ud_references" name="References" placeholder="">
                             <div class="row">
                                 <div class="col-lg-4">
                             Lat : <input type="text" id="current_lat"/></div>
