--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -15,6 +15,7 @@
     <link href="{% static "js/libs/openlayers-4.6.4/ol.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/noUiSlider.11.1.0/nouislider.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.css" %}" rel="stylesheet">
+    <link href="{% static "js/libs/chosen/chosen.min.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
         const max_year_filter = '{{ date_filter.max }}';
