Store to database

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -606,8 +606,7 @@
                                 References
                             </label>
                             <div class="form-group">
-                                <select multiple id="ud_references" name="References" class="">
-                                    <option value="">-</option>
+                                <select multiple id="ud_references" name="References" class="ud-item">
                                 </select>
                             </div>
                             <div class="row">
