--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -221,6 +221,9 @@ html, body, .map, .map-wrapper, #map-container {
     .panel-wrapper {
         width: 100%;
     }
+    .ui-slider-horizontal {
+        margin-left: 50px !important;
+    }
 }
 
 .green {
@@ -1985,3 +1988,4 @@ div:hover::-webkit-scrollbar {
 .close-button:hover > img, .close-icon:hover {
     filter: invert(100%);
 }
+
