--- a/bims/templates/td_biblio/entry_list.html
+++ b/bims/templates/td_biblio/entry_list.html
@@ -93,7 +93,7 @@
 
         <h2>{% trans "Publications" %}</h2>
 
-        {% if request.user.is_superuser %}
+        {% if perms.td_biblio.can_add_bibliograpy_entry %}
         <div class="import-message">
           <a href="{% url 'td_biblio:import' %}" class="button import"
                   data-toggle="Import with DOIs or PubMed ids">
