add print to pdf

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Sorry we are unable to print your map because the map canvas is tainted due to CORS.
-                    Please reload the page and try another basemap or another layer.</p>
+                    Please try another basemap or another layer and reload the page.</p>
                 </div>
             </div>
         </div>
