fix wording in popup

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -86,8 +86,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Sorry we are unable to print your map because the map canvas is tainted due to CORS.
-                    Please try another basemap or another layer and reload the page.</p>
+                    <center>Sorry we are unable to print your map.
+                        <br/>There was a problem adding some third party layer(s) to the map.<br/>
+                    Please try another basemap or another layer and reload the page.</center>
                 </div>
             </div>
         </div>
