--- a/bims/templates/documents/document_base.html
+++ b/bims/templates/documents/document_base.html
@@ -4,47 +4,8 @@
 
 {% block title %} {{ block.super }} {% endblock %}
 {% block header %}
-    <link href="{% static "js/libs/bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
-    <link href="{% static "css/base.css" %}" rel="stylesheet">
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
-    <style>
-        body {
-            background-color: rgba(239, 239, 239, 0.27);
-            padding-top: 80px;
-            font-size: 11pt;
-        }
-        .navbar-nav .dropdown-menu {
-            background-color: #ffffff;
-            border-top: 1px solid #ffffff;
-            color: black;
-        }
-        .navbar-nav .dropdown-menu a {
-            color: #000000;
-        }
-        .table {
-            font-size: 11pt;
-        }
-        .list-group {
-            font-size: 11pt;
-        }
-        .page-title {
-            font-size: 20pt;
-        }
-        .form-controls {
-            font-size: 13pt;
-        }
-        .form-control {
-            font-size: 13pt;
-        }
-        .item-thumb {
-            padding-left: 0;
-            padding-right: 0;
-        }
-        .item-container {
-            padding: 1em;
-        }
-
-    </style>
+    <link href="{% static "css/navbar_geonode.css" %}" rel="stylesheet">
     {% include 'navigation_bar.html' %}
 {% endblock %}
 
