--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -16,7 +16,7 @@
                         {% if user.is_authenticated %}
                             <a class="dropdown-item" href="/tracking/">SITE
                                 STATISTICS</a>
-                            <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a>
+                            <a class="dropdown-item" id="navbar-doc-report" href="/documents/">DOCUMENTS</a>
                         {% endif %}
                         <a class="dropdown-item" id="navbar-contact" href="/contact/">CONTACT</a>
                         <a class="dropdown-item" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a>
