--- a/bims/templates/metadata_base.html
+++ b/bims/templates/metadata_base.html
@@ -7,6 +7,7 @@
 {% load floppyforms %}
 {% load static from staticfiles %}
 
+
 {% block head %}
   <script src="{% static "lib/js/jquery.js" %}?v={{ VERSION }}"></script>
   <script src="{% static "lib/js/moment-with-locales.min.js" %}?v={{ VERSION }}"></script>
@@ -109,13 +110,9 @@
 
 {% block title %} {{ block.super }} {% endblock %}
 {% block header %}
-    <style>
-        body {
-            background-color: rgba(239, 239, 239, 0.27);
-            padding-top: 80px;
-            font-size: 11pt;
-        }
-    </style>
+    <link href="{% static "css/navbar.css" %}" rel="stylesheet">
+    <link href="{% static "css/navbar_geonode.css" %}" rel="stylesheet">
+    {% include 'navigation_bar.html' %}
 {% endblock %}
 
 {% block body_class %}data{% endblock body_class %}
