--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -359,7 +359,7 @@
 </script>
 
 <script type="text/html" id="layer-selector-row">
-    <li class="ui-state-default" data-name="<%= name %>">
+    <li class="ui-state-default" style="display: <%= display %>" data-name="<%= name %>">
         <div class="row-title">
             <span class="ui-icon ui-icon-arrowthick-2-n-s"></span>
             <input type="checkbox" value="<%= key %>" class="layer-selector-input" <%= checked %>>
