Load layers through proxy

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -404,6 +404,9 @@
         <div class="download-control sub-control-panel" data-toggle="popover" data-placement="right" data-trigger="hover" data-content="Download Data">
             <i class="fa fa-download" aria-hidden="true"></i>
         </div>
+        <div class="print-map-control sub-control-panel" data-toggle="popover" data-placement="right" data-trigger="hover" data-content="Print Map">
+            <i class="fa fa-print" aria-hidden="true"></i>
+        </div>
     </div>
     <div class="zoom-control row">
         <div class="col-lg-6 sub-zoom-control zoom-out"><i class="fa fa-plus" aria-hidden="true"></i></div>
