--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1980,6 +1980,20 @@ div:hover::-webkit-scrollbar {
     margin-bottom: 5px;
 }
 
+#ripple-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 100000;
+}
+
+#ripple-loading img {
+    margin: 20% 45%;
+}
+
 .modal-header .close {
     padding: 15px !important;
 }
