Django bims 526 - Renamed layer from Biodiversity to Sites (#561)
* Added two commands I needed to run to readme before installing requirements.txt

* Added two commands I needed to run to readme before installing requirements.txt.
Note about python 3 vs python 2.
Added which port to test on.

* Fixed Issue #526 - Changed the layer name from Biodiversity to sites. Updated the legend to also say 'Sites Legend'

* Fix flake8 errors (indentation typo)

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -827,7 +827,7 @@
     <div class="bio-legend-wrapper">
         <div class="bio-legend-container">
             <div class="bio-legend-title">
-                Biodiversity Legend
+                Sites Legend
             </div>
             <div class="bio-legend-content">
                 <div class="row">
