Fix dashboard detail

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -85,39 +85,7 @@
 </script>
 
 <script type="text/template" id="taxon-detail-table">
-    <table>
-        <tr>
-            <td>Kingdom</td>
-            <td><%= kingdom %></td>
-        </tr>
-        <tr>
-            <td>Phylum</td>
-            <td><%= phylum %></td>
-        </tr>
-        <tr>
-            <td>Order</td>
-            <td><%= order %></td>
-        </tr>
-        <tr>
-            <td>Family</td>
-            <td><%= family %></td>
-        </tr>
-        <tr>
-            <td>Genus</td>
-            <td><%= genus %></td>
-        </tr>
-        <tr>
-            <td>Species</td>
-            <td><%= species %></td>
-        </tr>
-        <tr>
-            <td>Common name</td>
-            <td><%= common_name %></td>
-        </tr>
-        <tr>
-            <td>Scientific name</td>
-            <td><%= scientific_name %></td>
-        </tr>
+    <table class="taxon-dashboard-detail">
     </table>
 </script>
 
