Fix species list in site detail

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -109,7 +109,7 @@ html, body, .map, .map-wrapper, #map-container {
 }
 
 .right-panel-header {
-    font-size: 17pt;
+    font-size: 21px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 15px;
