--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -225,6 +225,7 @@ html, body, .map, .map-wrapper, #map-container {
     .panel-wrapper {
         width: 100%;
     }
+
     .ui-slider-horizontal {
         margin-left: 50px !important;
     }
@@ -1012,7 +1013,31 @@ div:hover::-webkit-scrollbar {
     z-index: 999;
 }
 
+.map-legend-wrapper {
+    border-radius: 5px;
+    min-height: 31px;
+    min-width: 31px;
+    max-width: 250px;
+    max-height: 450px;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    position: absolute;
+    left: 0.5em;
+    bottom: 80px;
+    background-color: white;
+    cursor: pointer;
+    z-index: 999;
+}
+
 #map-legend-symbol {
+    height: 31px;
+    width: 31px;
+    text-align: center;
+    padding-top: 4px;
+    font-weight: 700;
+}
+
+.map-legend-symbol {
     height: 31px;
     width: 31px;
     text-align: center;
@@ -1032,6 +1057,30 @@ div:hover::-webkit-scrollbar {
 }
 
 #map-legend-wrapper .legend-row:last-child {
+    border-bottom: none;
+}
+
+.map-legend-wrapper.hide-legend {
+    max-width: 31px;
+    max-height: 31px;
+    opacity: 0.7;
+    overflow: hidden;
+}
+
+.map-legend-wrapper .legend-row {
+    padding: 10px;
+}
+
+#start-tutorial {
+    position: relative;
+    bottom: 4rem;
+    left: 1rem;
+    width: 31px;
+    height: 31px;
+    text-align: center;
+}
+
+.map-legend-wrapper .legend-row:last-child {
     border-bottom: none;
 }
 
@@ -1648,7 +1697,7 @@ div:hover::-webkit-scrollbar {
 }
 
 .dropdown-menu {
-    border: 1px solid rgba(0,0,0,.15);
+    border: 1px solid rgba(0, 0, 0, .15);
     border-radius: .25rem;
 }
 
@@ -1877,17 +1926,17 @@ div:hover::-webkit-scrollbar {
 }
 
 .ck-button {
-    margin:4px;
-    background-color:#EFEFEF;
-    border:1px solid #D0D0D0;
-    float:left;
+    margin: 4px;
+    background-color: #EFEFEF;
+    border: 1px solid #D0D0D0;
+    float: left;
     overflow-x: hidden;
     overflow-y: hidden;
     height: 25px;
 }
 
 .ck-button:hover {
-    background:rgba(219, 175, 0, 0.7);
+    background: rgba(219, 175, 0, 0.7);
     cursor: pointer;
 }
 
@@ -1896,26 +1945,26 @@ div:hover::-webkit-scrollbar {
 }
 
 .ck-button label {
-    float:left;
-    width:4.0em;
+    float: left;
+    width: 4.0em;
 }
 
 .ck-button label span {
-    text-align:center;
+    text-align: center;
     padding-top: 3px;
     padding-bottom: 5px;
     font-size: 12px;
-    display:block;
+    display: block;
 }
 
 .ck-button label input {
-    position:absolute;
-    top:-20px;
+    position: absolute;
+    top: -20px;
 }
 
 .ck-button input:checked + span {
-    background-color:#1b900d;
-    color:#fff;
+    background-color: #1b900d;
+    color: #fff;
 }
 
 .small-subtitle {
@@ -2028,10 +2077,10 @@ div:hover::-webkit-scrollbar {
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
-.layer-selector-search-input .form-control{
-	border-right:0;
-	box-shadow:0 0 0;
-	border-color:#ccc;
+.layer-selector-search-input .form-control {
+    border-right: 0;
+    box-shadow: 0 0 0;
+    border-color: #ccc;
 }
 
 .layer-selector-tags {
