--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -13,6 +13,9 @@
 
     <link href="{% static "js/libs/bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">
+      <!-- IntroJs styles -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/introjs.min.css" rel="stylesheet">
+
     <link href="{% static "css/base.css" %}" rel="stylesheet">
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,500,500i,700,700i|Roboto+Condensed:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
@@ -39,10 +42,31 @@
 {% block body_content %} {% endblock %}
 
 <!-- Bootstrap core JavaScript -->
+<!-- IntroJS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/intro.min.js"></script>
+    <script type="text/javascript" src="../static/js/views/tutorial.js"></script>
 
 {% block foot %} {% endblock %}
 
 </body>
+<!-- This is here only for development purposes and should be moved to a css
+file !-->
+<style>
+    #start-tutorial {
+        position: fixed;
+        bottom: 2.5em;
+        width: 31px;
+        height: 31px;
+        text-align: center;
+        padding-top: 4px;
+        font-weight: 700;
+        left: 0.5em;
+        border-radius: 5px;
+        z-index: 2;
+    }
 
+    .clicklesslink {
 
+    }
+</style>
 </html>
