Added link to About Us page

--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -12,6 +12,8 @@
                     <div class="dropdown-menu dropdown-menu-left" aria-labelledby="menu-dropdown-burger">
                         <a class="dropdown-item" href="/">HOME</a>
                         <a class="dropdown-item" href="/map">MAP</a>
+                        <a class="dropdown-item"
+                           href="/pages/about_us/">ABOUT US</a>
                         <a class="dropdown-item" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a>
                         {% if user.is_authenticated %}
                             <a class="dropdown-item" href="/tracking/">SITE
